// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-input spec: Render logic -> renders correct HTML 1`] = `
<amplify-input>
  <input class="amplify-ui--input css-g9dmxw" placeholder="" type="text">
</amplify-input>
`;

exports[`amplify-input spec: Render logic -> renders with a name for the input 1`] = `
<amplify-input name="seattle">
  <input class="amplify-ui--input css-g9dmxw" name="seattle" placeholder="" type="text">
</amplify-input>
`;

exports[`amplify-input spec: Render logic -> renders with inputProps spread 1`] = `
<amplify-input inputprops="[object Object]">
  <input class="amplify-ui--input css-g9dmxw" placeholder="" type="text">
</amplify-input>
`;

exports[`amplify-input spec: Render logic -> renders without Emotion CSS class when overrideStyle is true 1`] = `
<amplify-input override-style="true">
  <input class="amplify-ui--input" placeholder="" type="text">
</amplify-input>
`;
